--- a/notebooks/Parcial2ETLAirBNB.ipynb
+++ b/notebooks/Parcial2ETLAirBNB.ipynb
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 1,
    "id": "8d296854-2cb8-4681-90c7-ebc9df06761d",
    "metadata": {},
    "outputs": [],
@@ -45,7 +45,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 3,
    "id": "c7739335-d3ea-4e82-8b81-a261102d952b",
    "metadata": {},
    "outputs": [
@@ -83,22 +83,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 4,
    "id": "6b97a41e-c9b4-4b51-82e4-f0a1fabb2ede",
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "AttributeError",
-     "evalue": "'Extraction' object has no attribute 'close_mongodb_connection'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
-      "\u001b[31mAttributeError\u001b[39m                            Traceback (most recent call last)",
-      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[20]\u001b[39m\u001b[32m, line 7\u001b[39m\n\u001b[32m      4\u001b[39m df_reviews = extra.load_mongodb_datasets(db, \u001b[33m'\u001b[39m\u001b[33mreviews_mx\u001b[39m\u001b[33m'\u001b[39m)\n\u001b[32m      6\u001b[39m \u001b[38;5;66;03m#Cerrar la conexión con la base de datos\u001b[39;00m\n\u001b[32m----> \u001b[39m\u001b[32m7\u001b[39m \u001b[43mextra\u001b[49m\u001b[43m.\u001b[49m\u001b[43mclose_mongodb_connection\u001b[49m(uri)\n",
-      "\u001b[31mAttributeError\u001b[39m: 'Extraction' object has no attribute 'close_mongodb_connection'"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "#Creación de los DF de las colecciones\n",
     "df_listings = extra.load_mongodb_datasets(db, 'listings_mx')\n",
@@ -958,10 +946,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "id": "c904c423-9bc6-429b-8140-07b56a4b6891",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "_id                     0\n",
+       "listing_id              0\n",
+       "date                    0\n",
+       "available               0\n",
+       "price                   0\n",
+       "minimum_nights        220\n",
+       "maximum_nights        220\n",
+       "adjusted_price    9512527\n",
+       "dtype: int64"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "#Sumatoria de nulos\n",
     "df_calendar.isnull().sum()"
@@ -969,10 +976,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "id": "27abcccb-8633-483b-8fce-bc025e14d464",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "_id                0.000000\n",
+       "listing_id         0.000000\n",
+       "date               0.000000\n",
+       "available          0.000000\n",
+       "price              0.000000\n",
+       "minimum_nights     0.002312\n",
+       "maximum_nights     0.002312\n",
+       "adjusted_price    99.976983\n",
+       "dtype: float64"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "#Porcentaje de nulos\n",
     "df_calendar.isnull().mean()*100"
