Finalización punto 3 del Parcial 2 ETL AirBNB

--- a/notebooks/Parcial2ETLAirBNB.ipynb
+++ b/notebooks/Parcial2ETLAirBNB.ipynb
@@ -1444,7 +1444,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": null,
    "id": "e5362ace-0298-4551-906b-82614b6b14ba",
    "metadata": {},
    "outputs": [
@@ -1467,7 +1467,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": null,
    "id": "e82cd913-ef7b-4065-8180-3671fc06658c",
    "metadata": {},
    "outputs": [
@@ -1497,7 +1497,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": null,
    "id": "dd9a4cd3-ba6a-4a61-8514-5883b9497d7e",
    "metadata": {},
    "outputs": [
@@ -1520,7 +1520,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": null,
    "id": "97e875b9-f95c-4b0d-96ca-b2ab1cb7602b",
    "metadata": {},
    "outputs": [
@@ -1550,7 +1550,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": null,
    "id": "3e447d2c-0b9b-4ea8-8455-377bb17d4df8",
    "metadata": {},
    "outputs": [
@@ -1573,7 +1573,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": null,
    "id": "ee2cc253-fc7e-4bf2-aed0-73a61d1d7ff7",
    "metadata": {},
    "outputs": [
@@ -1603,7 +1603,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": null,
    "id": "aa5e897f-3b87-47ee-a9fd-9e7d08dd8c2f",
    "metadata": {},
    "outputs": [
@@ -1626,7 +1626,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": null,
    "id": "d74763b6-078f-4dce-9780-b8dfc652cb9c",
    "metadata": {},
    "outputs": [
@@ -1656,7 +1656,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": null,
    "id": "392e6865-4d30-4b22-9bb8-411d884e1a37",
    "metadata": {},
    "outputs": [
@@ -1679,7 +1679,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": null,
    "id": "7d5f524c-3687-4e1c-b4e1-501cd7749912",
    "metadata": {},
    "outputs": [
@@ -1709,7 +1709,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": null,
    "id": "bd8857ea-69b0-47df-955d-c980517db8f4",
    "metadata": {},
    "outputs": [
@@ -1732,7 +1732,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": null,
    "id": "0fecb26f-4ece-48bf-a745-03fe96fbac5d",
    "metadata": {},
    "outputs": [
@@ -1762,7 +1762,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": null,
    "id": "524e63e1-6244-43b2-a033-8e64efa302f1",
    "metadata": {},
    "outputs": [
@@ -1793,7 +1793,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": null,
    "id": "98d64a98-5341-4dc2-8528-a2fb246273cb",
    "metadata": {},
    "outputs": [
@@ -1824,7 +1824,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": null,
    "id": "116d6d75-dd81-4d9f-9823-4bfcdc729b65",
    "metadata": {},
    "outputs": [
@@ -1855,7 +1855,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": null,
    "id": "d2a6493e-57b6-4d45-a55f-c51701e989d1",
    "metadata": {},
    "outputs": [
@@ -1886,7 +1886,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": null,
    "id": "1182a79f-4f35-4206-89d8-0ec05ab3f758",
    "metadata": {},
    "outputs": [
@@ -1917,7 +1917,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": null,
    "id": "f9bdf108-c59c-4190-917e-fbef461c6211",
    "metadata": {},
    "outputs": [
@@ -1940,7 +1940,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": null,
    "id": "72ec894e-944e-4490-949a-f90ad0f562bb",
    "metadata": {},
    "outputs": [
@@ -1970,7 +1970,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": null,
    "id": "ea747d28-8709-45ad-b708-14d8f408c051",
    "metadata": {},
    "outputs": [
@@ -1993,7 +1993,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": null,
    "id": "540cdeb1-83d3-4cfb-96e2-f247d0893325",
    "metadata": {},
    "outputs": [
@@ -2023,7 +2023,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": null,
    "id": "a41c3338-8565-4d5f-882e-14ab07b5337d",
    "metadata": {},
    "outputs": [
@@ -2054,7 +2054,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": null,
    "id": "0507560c-6cb1-4b33-8c35-60c3ab36f51e",
    "metadata": {},
    "outputs": [
@@ -2077,7 +2077,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": null,
    "id": "534403b0-a3bc-4d7d-a3a3-f507d37f1f9e",
    "metadata": {},
    "outputs": [
@@ -2107,7 +2107,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": null,
    "id": "9593bc17-f519-459d-82b6-42c8863400a2",
    "metadata": {},
    "outputs": [
@@ -2130,7 +2130,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": null,
    "id": "68f93e8a-9b78-412a-aa72-1f654604014f",
    "metadata": {},
    "outputs": [
@@ -2160,7 +2160,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": null,
    "id": "fe0a3274-31ea-4646-8dc6-c555cf474cc9",
    "metadata": {},
    "outputs": [
@@ -2183,7 +2183,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": null,
    "id": "12473b6a-f1f8-492e-8e52-52d23b4a41ba",
    "metadata": {},
    "outputs": [
@@ -2213,7 +2213,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": null,
    "id": "b455f8f8-e83c-4c20-a6e5-d0293c38a9b1",
    "metadata": {},
    "outputs": [
@@ -2236,7 +2236,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": null,
    "id": "ae9d4855-019b-43c9-aace-4302c37402b0",
    "metadata": {},
    "outputs": [
@@ -2266,7 +2266,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": null,
    "id": "ce8c05e1-764e-4198-b638-7fa27911720c",
    "metadata": {},
    "outputs": [
@@ -2289,7 +2289,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": null,
    "id": "1aadddd3-137f-4982-9947-6237bd7a3bbe",
    "metadata": {},
    "outputs": [
@@ -2319,7 +2319,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": null,
    "id": "b0e539ac-9b86-4fe4-ba4f-28080f8dbc6d",
    "metadata": {},
    "outputs": [
@@ -2342,7 +2342,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": null,
    "id": "4f58d82b-27f2-402c-82f1-0d1b83c9b34b",
    "metadata": {},
    "outputs": [
@@ -2372,7 +2372,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": null,
    "id": "ccdf2656-45cd-40dd-8c2b-46e42d9ad0f1",
    "metadata": {},
    "outputs": [
@@ -2395,7 +2395,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": null,
    "id": "fea6885d-6a4c-4b83-a63d-68661c38bf4e",
    "metadata": {},
    "outputs": [
@@ -2425,7 +2425,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": null,
    "id": "ea42e857-e4cd-4c50-a733-08a433364805",
    "metadata": {},
    "outputs": [
@@ -2448,7 +2448,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": null,
    "id": "ecc34968-cfaa-40d8-b477-76a8f6ad175c",
    "metadata": {},
    "outputs": [
@@ -2478,7 +2478,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": null,
    "id": "a8f0f630-ab04-4e9f-8491-1aaaa594d679",
    "metadata": {},
    "outputs": [
@@ -2501,7 +2501,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": null,
    "id": "64b0fbdf-51a2-4d12-b75b-9fed25051bcf",
    "metadata": {},
    "outputs": [
@@ -2531,7 +2531,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": null,
    "id": "c273f161-e66e-49de-8161-3779f1866ba5",
    "metadata": {},
    "outputs": [
@@ -2554,7 +2554,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": null,
    "id": "37d311f2-0ce4-4a0d-a265-f4731a0589e7",
    "metadata": {},
    "outputs": [
@@ -2584,7 +2584,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": null,
    "id": "48526526-6e7f-4b77-ad04-b52a13de4238",
    "metadata": {},
    "outputs": [
@@ -2607,7 +2607,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": null,
    "id": "1ed973db-7417-43aa-b7a2-a000d1d2b520",
    "metadata": {},
    "outputs": [
@@ -2633,6 +2633,14 @@
    "metadata": {},
    "source": [
     "Reviews_per_month presenta valores atípicos, en donde se puede apreciar un número demasiado alto. Siendo que, según los datos, la mayoría de caso no pasan de las 20 reseñas. Razón por la cual, es apropiado limpiar estos datos elevados."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "28df6642",
+   "metadata": {},
+   "source": [
+    "Aquí se hizo el análisis de las columnas con mayor valor para el negocio, con el fin de asegurar que estas no tengan mayor problema al llevarlas a la sábana de datos. Sin embargo, pueden existir algunas otras que también sean agregadas a dicha tabla y que no se hayan examinado aquí."
    ]
   },
   {
